--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=Testng-sonar
 sonar.projectVersion=1.0
 
 sonar.sources=src
-sonar.java.binaries=bin
+sonar.java.binaries=target/classes
 
 sonar.sourceEncoding=UTF-8
 sonar.login=squ_9c894d0c9035d157242d17c420fe0340d2f48656
